# meshtastic-monitor

./: .gitignore  LICENSE  README.md  RELEASING.md  SECURITY.md  TODO.md  meshtastic-monitor  pyproject.toml  pytest.ini  run.sh  setup.cfg
.github/workflows/: ci.yml  publish.yml  release.yml
backend/: __init__.py  app.py  config_store.py  jsonsafe.py  mesh_service.py  requirements.txt  sms_relay.py  stats_db.py  stats_utils.py  tcp_relay.py
backend/tests/: conftest.py  test_api.py  test_contracts.py  test_frontend_channel_tabs.py  test_frontend_settings_tab.py  test_jsonsafe.py  test_mesh_service.py  test_sms_relay.py  test_stats_db.py  test_tcp_relay.py
backend/tests/fixtures/: channel_primary.json  node_firmware_dict.json  node_happy.json  node_snake_case.json  packet_channel_index.json  packet_fromid_bytes.py  packet_with_payload.py  radio_position.json  status_report_empty_logs.json  status_report_full.json  status_report_partial.json
backend/tests/fixtures/expected/: json_safe_packet_channel_index.json  json_safe_packet_fromid_bytes.json  json_safe_packet_with_payload.json  node_entry_firmware_dict.json  node_entry_happy.json  node_entry_snake_case.json  radio_entry_position.json  status_report_empty_logs.json  status_report_full.json  status_report_partial.json
backend/tests/fixtures/live/: nodes.json
frontend/: __init__.py  app.js  channel_tabs.js  index.html  styles.css
frontend/tests/: channel_tabs.test.js
meshtastic_monitor/: __init__.py  __main__.py
scripts/: analyze_db.py  capture_meshtastic.py
