[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshtastic-monitor"
version = "0.1"
description = "Simple Meshtastic monitoring UI + JSON API"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
  "Flask>=2.3",
  "meshtastic>=2.0",
  "pypubsub>=4.0.3",
]

[tool.setuptools.packages.find]
include = ["backend", "frontend", "meshtastic_monitor"]
exclude = ["backend.tests", "backend.tests.*"]

[tool.setuptools.package-data]
frontend = ["*.html", "*.css", "*.js"]
