[metadata]
name = meshtastic-monitor
version = 0.1.16
description = Simple Meshtastic monitoring UI + JSON API
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

[options]
python_requires = >=3.9
packages = find:
include_package_data = True
install_requires =
    Flask>=2.3
    meshtastic>=2.0
    pypubsub>=4.0.3

[options.packages.find]
include =
    backend
    frontend
    meshtastic_monitor
exclude =
    backend.tests
    backend.tests.*

[options.package_data]
frontend = *.html, *.css, *.js
